Removed addition of "fake" rate parameters.  Added method to return all LiteSettlementConfigs for a field (used for rates, where there are more than one config for a fieldname)